--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello
+<html>
+  <head>
+    <title>Bret's web</title>
+  </head>
+  <body>
+    <h1>Welcome to Bret's website</h1>
+    <a href="./writing.html" target="_blank">Writing</a>
+    <br>
+    <a href="#" target="_blank">Reading</a>
+    <br>
+    <a href="https://jortren.github.io/a/index.html" target="_blank">Bret's store</a>
+    <br>
+  </body>
+</html>
