--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Welcome to Bret's website</h1>
-    <a href="./writing.html" target="_blank">Writing</a>
+    <a href="https://jortren.github.io/web/writing.html" target="_blank">Writing</a>
     <br>
     <a href="#" target="_blank">Reading</a>
     <br>
